added new background, and created display row

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <div class="row">
+      <div class="col"></div>
+      <div class="col"></div>
+    </div>
     <button id="ball">hit me</button>
     <script src="app.js"></script>
   </body>
