--- a/index.html
+++ b/index.html
@@ -6,15 +6,32 @@
 
     <link type="text/css" rel="stylesheet" href="style.css" />
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Bingo</title>
   </head>
 
   <body>
     <div class="row">
-      <div class="col"></div>
-      <div class="col"></div>
+      <div class="col-4">
+        <div class="current-ball">
+          <div class="ball-number">&#9899</div>
+        </div>
+      </div>
+      <div class="col-4" id="middle-column">
+        <button id="ball">
+          <img src="balldropper2.png" alt="Drop Ball Button" />
+        </button>
+      </div>
+      <div class="col-4" id="third-column">
+        <div class="called-balls-container"></div>
+        <h2 id="balls-remaining"></h2>
+      </div>
     </div>
-    <button id="ball">hit me</button>
+
     <script src="app.js"></script>
   </body>
 </html>
