chosen numbers are showing up on grid, seems to still have a small bug not allowing some number to show up

--- a/index.html
+++ b/index.html
@@ -27,7 +27,122 @@
         </button>
       </div>
       <div class="col-4" id="third-column">
-        <div class="called-balls-container"></div>
+        <div class="called-balls-container">
+          <table id="bingotable">
+            <tr class="table-row">
+              <th class="card-header">B</th>
+              <th class="card-header">I</th>
+              <th class="card-header">N</th>
+              <th class="card-header">G</th>
+              <th class="card-header">O</th>
+            </tr>
+            <tr class="table-row">
+              <td id="square01"> &nbsp;</td>
+              <td id="square16"> &nbsp;</td>
+              <td id="square31"> &nbsp;</td>
+              <td id="square46"> &nbsp;</td>
+              <td id="square61"> &nbsp;</td>
+            </tr>
+            <tr class="table-row">
+              <td id="square02"> &nbsp;</td>
+              <td id="square17"> &nbsp;</td>
+              <td id="square32"> &nbsp;</td>
+              <td id="square47"> &nbsp;</td>
+              <td id="square62"> &nbsp;</td>
+            </tr>
+            <tr class="table-row">
+              <td id="square03"> &nbsp;</td>
+              <td id="square18"> &nbsp;</td>
+              <td id="square33"> &nbsp;</td>
+              <td id="square48"> &nbsp;</td>
+              <td id="square63"> &nbsp;</td>
+            </tr>
+            <tr class="table-row">
+              <td id="square04"> &nbsp;</td>
+              <td id="square19"> &nbsp;</td>
+              <td id="square34"> &nbsp;</td>
+              <td id="square49"> &nbsp;</td>
+              <td id="square64"> &nbsp;</td>
+            </tr>
+            <tr class="table-row">
+              <td id="square05"> &nbsp;</td>
+              <td id="square20"> &nbsp;</td>
+              <td id="square35"> &nbsp;</td>
+              <td id="square50"> &nbsp;</td>
+              <td id="square65"> &nbsp;</td>
+            </tr>
+            <tr class="table-row">
+              <td id="square06"> &nbsp;</td>
+              <td id="square21"> &nbsp;</td>
+              <td id="square36"> &nbsp;</td>
+              <td id="square51"> &nbsp;</td>
+              <td id="square66"> &nbsp;</td>
+            </tr>
+            <tr class="table-row">
+              <td id="square07"> &nbsp;</td>
+              <td id="square22"> &nbsp;</td>
+              <td id="square37"> &nbsp;</td>
+              <td id="square52"> &nbsp;</td>
+              <td id="square67"> &nbsp;</td>
+            </tr>
+            <tr class="table-row">
+              <td id="square08"> &nbsp;</td>
+              <td id="square23"> &nbsp;</td>
+              <td id="square38"> &nbsp;</td>
+              <td id="square53"> &nbsp;</td>
+              <td id="square68"> &nbsp;</td>
+            </tr>
+            <tr class="table-row">
+              <td id="square09"> &nbsp;</td>
+              <td id="square24"> &nbsp;</td>
+              <td id="square39"> &nbsp;</td>
+              <td id="square54"> &nbsp;</td>
+              <td id="square69"> &nbsp;</td>
+            </tr>
+            <tr class="table-row">
+              <td id="square10"> &nbsp;</td>
+              <td id="square25"> &nbsp;</td>
+              <td id="square40"> &nbsp;</td>
+              <td id="square55"> &nbsp;</td>
+              <td id="square70"> &nbsp;</td>
+            </tr>
+            <tr class="table-row">
+              <td id="square11"> &nbsp;</td>
+              <td id="square26"> &nbsp;</td>
+              <td id="square41"> &nbsp;</td>
+              <td id="square56"> &nbsp;</td>
+              <td id="square71"> &nbsp;</td>
+            </tr>
+            <tr class="table-row">
+              <td id="square12"> &nbsp;</td>
+              <td id="square27"> &nbsp;</td>
+              <td id="square42"> &nbsp;</td>
+              <td id="square57"> &nbsp;</td>
+              <td id="square72"> &nbsp;</td>
+            </tr>
+            <tr class="table-row">
+              <td id="square13"> &nbsp;</td>
+              <td id="square28"> &nbsp;</td>
+              <td id="square43"> &nbsp;</td>
+              <td id="square58"> &nbsp;</td>
+              <td id="square73"> &nbsp;</td>
+            </tr>
+            <tr class="table-row">
+              <td id="square14"> &nbsp;</td>
+              <td id="square29"> &nbsp;</td>
+              <td id="square44"> &nbsp;</td>
+              <td id="square59"> &nbsp;</td>
+              <td id="square74"> &nbsp;</td>
+            </tr>
+            <tr class="table-row">
+              <td id="square15"> &nbsp;</td>
+              <td id="square30"> &nbsp;</td>
+              <td id="square45"> &nbsp;</td>
+              <td id="square60"> &nbsp;</td>
+              <td id="square75"> &nbsp;</td>
+            </tr>
+          </table>
+        </div>
         <h2 id="balls-remaining"></h2>
       </div>
     </div>
