deleted unused images, and changed file structure

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <div class="row">
       <div class="col-4" id="first-column">
         <button id="ball">
-          <img src="balldropper2.png" alt="Drop Ball Button" />
+          <img src="./images/balldropper.png" alt="Drop Ball Button" />
         </button>
         <button id="card">
-          <img src="bingo (2).png" alt="Clear Card Button" />
+          <img src="./images/bingocard.png" alt="Clear Card Button" />
         </button>
       </div>
       <div class="col-4" id="middle-column">
