completed responsiveness for larger screens, deleted clear card

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="ball-dropper-container">
           <button id="ball">
             <img
-              src="./images/bingo (5).png"
+              src="./images/balldropper.png"
               alt="Drop Ball Button"
               id="ball-dropper-icon"
             />
