--- a/bingocard.html
+++ b/bingocard.html
@@ -23,49 +23,50 @@
     <div id="content">
       <table id="bingotable">
         <tr>
-          <th class="orange">B</th>
-          <th class="orange">I</th>
-          <th class="orange">N</th>
-          <th class="orange">G</th>
-          <th class="orange">O</th>
+          <th>B</th>
+          <th>I</th>
+          <th>N</th>
+          <th>G</th>
+          <th>O</th>
         </tr>
         <tr>
           <td id="square0"> &nbsp;</td>
-          <td id="square1"> &nbsp;</td>
-          <td id="square2"> &nbsp;</td>
-          <td id="square3"> &nbsp;</td>
-          <td id="square4"> &nbsp;</td>
-        </tr>
-        <tr>
           <td id="square5"> &nbsp;</td>
-          <td id="square6"> &nbsp;</td>
-          <td id="square7"> &nbsp;</td>
-          <td id="square8"> &nbsp;</td>
-          <td id="square9"> &nbsp;</td>
-        </tr>
-        <tr>
           <td id="square10"> &nbsp;</td>
-          <td id="square11"> &nbsp;</td>
-          <td id="squarefree"> &#9786</td>
-          <td id="square12"> &nbsp;</td>
-          <td id="square13"> &nbsp;</td>
-        </tr>
-        <tr>
           <td id="square14"> &nbsp;</td>
-          <td id="square15"> &nbsp;</td>
-          <td id="square16"> &nbsp;</td>
-          <td id="square17"> &nbsp;</td>
-          <td id="square18"> &nbsp;</td>
+          <td id="square19"> &nbsp;</td>
         </tr>
         <tr>
-          <td id="square19"> &nbsp;</td>
+          <td id="square1"> &nbsp;</td>
+          <td id="square6"> &nbsp;</td>
+          <td id="square11"> &nbsp;</td>
+          <td id="square15"> &nbsp;</td>
           <td id="square20"> &nbsp;</td>
+        </tr>
+        <tr>
+          <td id="square2"> &nbsp;</td>
+          <td id="square7"> &nbsp;</td>
+          <td id="squarefree"> &#9786</td>
+          <td id="square16"> &nbsp;</td>
           <td id="square21"> &nbsp;</td>
+        </tr>
+        <tr>
+          <td id="square3"> &nbsp;</td>
+          <td id="square8"> &nbsp;</td>
+          <td id="square12"> &nbsp;</td>
+          <td id="square17"> &nbsp;</td>
           <td id="square22"> &nbsp;</td>
+        </tr>
+        <tr>
+          <td id="square4"> &nbsp;</td>
+          <td id="square9"> &nbsp;</td>
+          <td id="square13"> &nbsp;</td>
+          <td id="square18"> &nbsp;</td>
           <td id="square23"> &nbsp;</td>
         </tr>
       </table>
     </div>
-    <script src="app.js"></script>
+    <button id="trigger">hitt me baby one more time!</button>
+    <script src="card.js"></script>
   </body>
 </html>
