added styling to card

--- a/bingocard.html
+++ b/bingocard.html
@@ -19,7 +19,7 @@
 
   <body>
 
-    <div id="container">
+    
     <div id="content">
       <table id="bingotable">
         <tr>
@@ -65,8 +65,13 @@
           <td id="square23"> &nbsp;</td>
         </tr>
       </table>
+
+
     </div>
-    <button id="trigger">hitt me baby one more time!</button>
+    <div class="container">    
+      <button id="trigger">NEW CARD</button>
+    </div>
+
     <script src="card.js"></script>
   </body>
 </html>
