--- a/bingocard.html
+++ b/bingocard.html
@@ -71,7 +71,7 @@
     <div class="container">    
       <button id="trigger">NEW CARD</button>
     </div>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="card.js"></script>
   </body>
 </html>
